--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bazi Lucky Color Analyst</title>
-
-    <!-- Tailwind CDN（先用，之後可再改成正式 build） -->
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- 字型 -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
-      body {
-        font-family: "Noto Sans TC", sans-serif;
-        background-color: #f8fafc;
-      }
-      .bazi-grid {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1rem;
-      }
-      @media (max-width: 640px) {
-        .bazi-grid {
-          grid-template-columns: repeat(2, 1fr);
+        body {
+            font-family: 'Noto Sans TC', sans-serif;
+            background-color: #f8fafc;
         }
-      }
+        .bazi-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 1rem;
+        }
+        @media (max-width: 640px) {
+            .bazi-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
     </style>
-  </head>
-
-  <body>
-    <!-- React 掛載點 -->
+<script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "lunar-javascript": "https://esm.sh/lunar-javascript@^1.7.7",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "html2canvas": "https://esm.sh/html2canvas@^1.4.1",
+    "jspdf": "https://esm.sh/jspdf@^4.0.0"
+  }
+}
+</script>
+</head>
+<body>
     <div id="root"></div>
-
-    <!-- ✅ Vite / React 入口（關鍵，沒有這行一定白畫面） -->
-    <script type="module" src="/index.tsx"></script>
-  </body>
+</body>
 </html>
